--- a/BackEnd/requirements.txt
+++ b/BackEnd/requirements.txt
@@ -1,7 +1,7 @@
 asgiref==3.7.2
 attrs==23.1.0
 certifi==2023.7.22
-cffi==1.15.1
+# cffi==1.15.1
 charset-normalizer==3.2.0
 cryptography==41.0.3
 defusedxml==0.7.1
